@@ -62,6 +62,8 @@ public class WikiBase {
 	public static final String NAMESPACE_JAMWIKI = "JAMWiki";
 	public static final String NAMESPACE_JAMWIKI_COMMENTS = "JAMWiki comments";
 	public static final String NAMESPACE_SPECIAL = "Special";
+	public static final String NAMESPACE_TEMPLATE = "Template";
+	public static final String NAMESPACE_TEMPLATE_COMMENTS = "Template comments";
 	public static final String NAMESPACE_USER = "User";
 	public static final String NAMESPACE_USER_COMMENTS = "User comments";
 	public static final String NAMESPACE_SEPARATOR = ":";
