@@ -2,6 +2,8 @@
 0.4.0
 =====
 
+* FEATURE: Add support for Mediawiki templates (see 
+  http://meta.wikimedia.org/wiki/Help:Templates).
 * FEATURE: Replace file persistency mode with an embedded version of the
   HSQL database.
 * FEATURE: Require admin user login to perform an upgrade.
